# vasco

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README.md  pyproject.toml  requirements.txt
galleon/: __init__.py  cache.py  cli.py
galleon/navigators/: digikey.py  jlcsearch.py  lcsc.py
vasco/: __init__.py  cache.py  cli.py
vasco/navigators/: __init__.py  digikey.py  jlcsearch.py  lcsc.py
